// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar buffer 1`] = `
"<div data-upgraded=\\",MaterialProgress\\" class=\\"mdl-progress is-upgraded\\">
  <div style=\\"width: 0%;\\" class=\\"progressbar bar bar1\\"></div>
  <div style=\\"width: 60%;\\" class=\\"bufferbar bar bar2\\"></div>
  <div style=\\"width: 40%;\\" class=\\"auxbar bar bar3\\"></div>
</div>"
`;

exports[`ProgressBar inderterminant 1`] = `
"<div data-upgraded=\\",MaterialProgress\\" class=\\"mdl-progress mdl-progress--indeterminate is-upgraded\\">
  <div style=\\"width: 0%;\\" class=\\"progressbar bar bar1\\"></div>
  <div style=\\"width: 100%;\\" class=\\"bufferbar bar bar2\\"></div>
  <div style=\\"width: 0%;\\" class=\\"auxbar bar bar3\\"></div>
</div>"
`;

exports[`ProgressBar no options 1`] = `
"<div data-upgraded=\\",MaterialProgress\\" class=\\"mdl-progress is-upgraded\\">
  <div style=\\"width: 0%;\\" class=\\"progressbar bar bar1\\"></div>
  <div style=\\"width: 100%;\\" class=\\"bufferbar bar bar2\\"></div>
  <div style=\\"width: 0%;\\" class=\\"auxbar bar bar3\\"></div>
</div>"
`;

exports[`ProgressBar propgress 1`] = `
"<div data-upgraded=\\",MaterialProgress\\" class=\\"mdl-progress is-upgraded\\">
  <div style=\\"width: 50%;\\" class=\\"progressbar bar bar1\\"></div>
  <div style=\\"width: 100%;\\" class=\\"bufferbar bar bar2\\"></div>
  <div style=\\"width: 0%;\\" class=\\"auxbar bar bar3\\"></div>
</div>"
`;
